@@ -27,8 +27,9 @@
       <property name="spacing">18</property>
 
       <child>
-	<widget class="GtkVBox" id="vbox143">
+	<widget class="GtkVBox" id="frame_box">
 	  <property name="visible">True</property>
+	  <property name="sensitive">False</property>
 	  <property name="homogeneous">False</property>
 	  <property name="spacing">6</property>
 
