@@ -1,3 +1,12 @@
+2007-04-09  Christian Persch  <chpe@gnome.org>
+
+	* data/glade/print.glade:
+	* embed/mozilla/EphyBrowser.cpp:
+	* embed/mozilla/GeckoPrintService.cpp:
+	* embed/mozilla/GeckoPrintService.h:
+
+	Fix printing of frames.
+
 2007-03-29  Christian Persch  <chpe@gnome.org>
 
 	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):
